2.0.6 - Added: Packeta related checkout delivery option availability is based on specified pricing rules and carrier support of countries and delivery methods
      - Removed: default price and specific countries GUI removed from delivery method configuration
      - Added: Packeta multi-carrier ability and default price migration
      - Added: non-intrusive carrier import from Packeta branch feed via command and cron job
      - Updated: README.md installation steps

2.0.5 - Fixed: guest is now able to select pickup point
      - Fixed: frontend pickup point validation now works for guest
      - Fixed: some older browser incompatibility
      - Added: user interface for changing order pickup point in administration

2.0.4 - Fixed: Packeta order now can not be created without pickup point

2.0.3 - Added: widget v6 integration allows pickup point selection for Germany and other countries
      - Added: other specific countries price rules
      - Added: allow specific countries via Packeta carrier configuration
      - Added: address delivery support
      - Updated: configuration moved to Packeta delivery method
      - Updated: pricing rules moved to dedicated admin section
      - Updated: place order mixins
      - Fixed: Magento installation with database prefix is now supported
      - Fixed: Database DECIMAL types of Packeta tables now allow precision for order value, weight and COD
      - Fixed: cross origin policies for widget
      - Fixed: payment method list now show all methods