@@ -4,17 +4,17 @@ declare(strict_types=1);
 
 namespace Packetery\Checkout\Controller\Adminhtml\Pricingrule;
 
-use Magento\Backend\App\Action;
-use Magento\Backend\App\Action\Context;
-use Magento\Framework\App\Action\HttpGetActionInterface;
 use Magento\Framework\View\Result\Page;
-use Magento\Framework\View\Result\PageFactory;
 
 class CarrierCountries extends \Magento\Backend\App\Action
 {
-    /** @var \Magento\Framework\View\Result\PageFactory  */
+    /** @var \Magento\Framework\View\Result\PageFactory */
     protected $resultPageFactory;
 
+    /**
+     * @param \Magento\Backend\App\Action\Context $context
+     * @param \Magento\Framework\View\Result\PageFactory $resultPageFactory
+     */
     public function __construct(
         \Magento\Backend\App\Action\Context $context,
         \Magento\Framework\View\Result\PageFactory $resultPageFactory
@@ -23,8 +23,10 @@ class CarrierCountries extends \Magento\Backend\App\Action
         $this->resultPageFactory = $resultPageFactory;
     }
 
-    public function execute()
-    {
+    /**
+     * @return Page
+     */
+    public function execute(): Page {
         /** @var \Magento\Backend\Model\View\Result\Page $resultPage */
         $resultPage = $this->resultPageFactory->create();
         $resultPage->setActiveMenu('Packetery_Checkout::carrierCountries');
