@@ -3,6 +3,8 @@
       - Added: Packeta multi-carrier ability and default price migration
       - Added: non-intrusive carrier import from Packeta branch feed via command and cron job
       - Updated: README.md installation steps
+      - Added: Packeta feed carriers carrier
+      - Updated: Pricing rules configuration
 
 2.0.5 - Fixed: guest is now able to select pickup point
       - Fixed: frontend pickup point validation now works for guest
